@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.121 2004/12/12 16:39:11 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.122 2004/12/15 00:50:35 wolf31o2 Exp $
+
+  14 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/livecd-stage1/livecd-stage1-chroot.sh:
+  Changed livecd-stage1 to merge each package individually. This should not
+  make it into a production version of catalyst, but is here as a possible
+  solution to bug #68307.
 
   12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
